tests/machine/x/scala/save_jsonl_stdout.error
exit status 1
/workspace/mochi/tests/machine/x/scala/save_jsonl_stdout.scala:4: error: value println is not a member of java.io.Closeable with Appendable with java.io.Flushable{def append(x$1: Char): java.io.Closeable with Appendable with java.io.Flushable; def append(x$1: CharSequence,x$2: Int,x$3: Int): java.io.Closeable with Appendable with java.io.Flushable; def append(x$1: CharSequence): java.io.Closeable with Appendable with java.io.Flushable}
  def _save_jsonl(rows: List[Map[String, Any]], path: String): Unit = { val out = if(path == "-") Console.out else new java.io.PrintWriter(path); rows.foreach(r => out.println(scala.util.parsing.json.JSONObject(r).toString())); if(out ne Console.out) out.close() }
                                                                                                                                                                        ^
/workspace/mochi/tests/machine/x/scala/save_jsonl_stdout.scala:8: error: type mismatch;
 found   : List[save_jsonl_stdout.People]
 required: List[Map[String,Any]]
    _save_jsonl(people, "-")
                ^
two errors found
